--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: postgres
+  username: <%= Rails.application.credentials.db[:username] %>
+  password: <%= Rails.application.credentials.db[:password] %>
   host: 127.0.0.1
   port: 5432
   # For details on connection pooling, see Rails configuration guide
@@ -85,6 +85,5 @@ test:
 #
 production:
   <<: *default
-  database: howarts_rails_production
-  username: howarts_rails
-  password: <%= ENV["HOWARTS_RAILS_DATABASE_PASSWORD"] %>
+
+  url:  <%= ENV['DATABASE_URL'] %>
